<resources>
    <string name="app_name" translatable="false">Passflix</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="SignUpText">Not registered yet?</string>
    <string name="login_btn">Sign In</string>
    <string name="editEmail">Email</string>
    <string name="editPass">Password</string>
    <string name="Titulo" translatable="false">Passflix</string>
    <string name="dish_pick">Choose your company</string>
    <string name="textCompany">Company?</string>
    <string name="textDate">Date?</string>
    <string name="textTime">Time?</string>
    <string name="editName">Name</string>
    <string name="editPasswordCheck">Repeat password</string>
    <string name="timePickerView">What time?</string>
    <string name="datePickerView">Which day?</string>
    <string name="companySpinner">With who?</string>
    <string name="getRecommendations">Get recommendations</string>
    <string name="error_field_required">The field is required.</string>
</resources>
