<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Controller.Activities.LoginActivity"
    android:background="?android:attr/windowBackground">

    <EditText
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPass"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="26dp"
        android:hint="@string/editPass"
        android:layout_below="@+id/editEmail"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail" />

    <EditText
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editEmail"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="310dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/editEmail"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/appText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Serflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appText"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white"
        android:textSize="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp_btn"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/signUpText"
        android:layout_alignBottom="@+id/signUpText"
        android:layout_alignRight="@+id/appText"
        android:layout_alignEnd="@+id/appText"
        android:text="@string/signUpBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText"
        android:textSize="20sp"
        android:text="@string/SignUpText"
        android:layout_above="@+id/request_btn"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn"
        android:layout_marginBottom="38dp" />

    <Button
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:layout_above="@+id/signUpText"
        android:layout_alignLeft="@+id/editPass"
        android:layout_alignStart="@+id/editPass"
        android:layout_marginBottom="24dp" />

    <Button
        android:text="Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/request_btn"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/signUp_btn"
        android:layout_toStartOf="@+id/signUp_btn"
        android:layout_marginBottom="45dp" />

</RelativeLayout>
